--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,11 @@
     color: rgba(44, 73, 254) !important;
 }
 
-.header{
+.pointer {
+    cursor: pointer;
+}
+
+.header {
     position: sticky;
     z-index: 100;
     background-color: #ffff;
@@ -96,24 +100,131 @@ nav li:first-child {
     border-radius: 10px;
 }
 
+/* section-1 */
 .Journey-btn,
 .Journey-btna {
     border-radius: 23px;
     border: white;
     background: rgba(44, 73, 254, 0.1);
-    padding: 11px 20px;
+    padding: 11px 23px;
 }
-.section-1 .svg{
+
+.section-1 .svg {
     padding-left: 16px;
 }
 
+.dictumst-para {
+    max-width: 857px;
+}
+
+/* section-2 */
+.section-2 {
+    margin-top: 100px !important;
+}
+
+.semper-para {
+    max-width: 642px !important;
+}
+
+.section-2 .circle {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    border: 2px solid var(--bg-white);
+    background-color: transparent;
+    left: 44%;
+    top: 40%;
+}
+
+/* section-3 */
+.grid-box {
+    display: grid;
+    width: 100% !important;
+    row-gap: auto;
+    column-gap: auto;
+    gap: 24px;
+}
+
+.item-1 {
+    grid-column: 1/2;
+}
+
+.item-2 {
+    grid-column: 2/3;
+}
+
+.item-3 {
+    grid-column: 3/4;
+    grid-row: 1/3;
+}
+
+.item-4 {
+    grid-row: 2/3;
+    grid-column: 1/3;
+}
+
+.item-5 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+}
+
+.item-6 {
+    grid-row: 3/4;
+    grid-column: 2/4;
+}
 
 
 
 
+@media (max-width:992px) {
+    .item-2 {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
 
+    .item-3 {
+        grid-row: 1/3;
+        grid-column: 2/3;
+    }
 
+    .item-4 {
+        grid-row: 3/4;
+        grid-column: 1/3;
+    }
 
+    .item-5 {
+        grid-row: 4/5;
+        grid-column: 1/3;
+    }
+
+    .item-6 {
+        grid-row: 5/6;
+        grid-column: 1/3;
+    }
+}
+
+@media (max-width:768px) {
+    .item-3 {
+        grid-row: 3/4;
+        grid-column: 1/2;
+    }
+
+    .item-4 {
+        grid-row: 4/5;
+        grid-column: 1/2;
+    }
+
+    .item-5 {
+        grid-row: 5/6;
+        grid-column: 1/2;
+    }
+
+    .item-6 {
+        grid-row: 6/7;
+        grid-column: 1/2;
+
+    }
+}
 
 @media (min-width:1040px) {
     .menu {
@@ -125,31 +236,38 @@ nav li:first-child {
     .hide {
         display: none;
     }
-  
 }
 
 @media (max-width:768px) {
- 
+    .section-2 {
+        margin-top: 0px !important;
+    }
 }
+
 @media (max-width:576px) {
     .sidebar {
         width: 100%;
     }
-    .svg-box{
-        flex-direction: column;
+
+    .svg-box {
         align-items: center;
+        flex-wrap: wrap;
     }
-       .event {
-           font-size: 28px;
-       }
-       nav li{
+
+    .event {
+        font-size: 28px;
+    }
+
+    nav li {
         height: 90px;
-       }
-      
-       .Journey-btna{
+    }
+
+    .Journey-btna {
         margin-top: 20px !important;
-       }
-     .section-1.svg {
-         padding-left: 0px;
-     }
+    }
+
+    .section-1.svg {
+        padding-left: 0px;
+    }
+
 }
