--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,9 @@
     cursor: pointer;
 }
 
+.fw-700{
+    font-weight: 700;
+}
 .header {
     position: sticky;
     z-index: 100;
@@ -20,7 +23,7 @@
 }
 
 .event {
-    font-size: var(--fs-36);
+    font-size: var(--fs-lg);
     font-weight: 700;
     line-height: 48.6px;
 }
@@ -210,15 +213,34 @@ nav li:first-child {
     transform: translateY(-50%);
 }
 
-.comment-box{
+.comment-box {
     background: rgba(241, 242, 245, 1);
     border-radius: 20px;
     border-top-left-radius: 0px !important;
 }
 
-.delete-svg{
-    fill: rgb(174, 170, 170);
-    cursor: pointer;
+/* footer */
+.footer {
+    background: rgba(0, 0, 0, 1);
+}
+
+footer ul li {
+    padding-bottom:10px;
+    list-style: none;
+}
+
+.footer ul{
+        padding: 0px !important;
+}
+
+.footer a{
+    color: var(--color-white);
+    text-decoration: none;
+}
+.footer-box{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(24,32,92);
 }
 
 @media (max-width:992px) {
@@ -314,4 +336,8 @@ nav li:first-child {
     .section-1.svg {
         padding-left: 0px;
     }
+
+    /* .post-btn{
+        top: 150%;
+    } */
 }
